changes in readme

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,9 @@
 
 ###> symfony/framework-bundle ###
-APP_SECRET=0e74ec541cb5a886c09d6f4a53ae4919
+APP_ENV=dev
+APP_SECRET=XXXXXXXXXXXXXXXXXXXXXXX
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="postgresql://USER_NAME:DB_PASSWORD@127.0.0.1:5432/demoapp?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
